Fix accent color in dark mode. Publish fluid update.

--- a/src/system/ui/layout/loading/style.scss
+++ b/src/system/ui/layout/loading/style.scss
@@ -16,7 +16,7 @@
             height: 6px;
             border-radius: 3px;
             margin: 0 3px;
-            background: var(--fluid-primary-color);
+            background: var(--fluid-accent);
 
             -webkit-animation: fl-asst-dot-bounce 1.4s infinite ease-in-out both;
             animation: fl-asst-dot-bounce 1.4s infinite ease-in-out both;
